<resources>
    <string name="app_name">TestSwa</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="search">Search</string>
    <string name="hair">Цвет волос:</string>
    <string name="eye">Цвет глаз:</string>
    <string name="mass">Вес:</string>
    <string name="height">Рост:</string>
    <string name="birth">Дата рождения:</string>
    <string name="gender">Пол:</string>
    <string name="error_network">Соедение с интернетом отсутствует</string>
    <string name="search_people">Поиск пересонажа...</string>
    <string name="saved_people_1">Этот пересонаж уже сохранен</string>
    <string name="saved_people_2">Персонаж сохранен</string>
</resources>
